--- a/chickenrobot.service
+++ b/chickenrobot.service
@@ -9,7 +9,7 @@ WorkingDirectory=/home/pi/dev/chickenrobot
 StandardOutput=inherit
 StandardError=inherit
 Restart=on-failure
-RestartSec=5s
+RestartSec=5
 
 [Install]
 WantedBy=multi-user.target
